# ivy

./: .gitignore  AUTORESEARCH_30RUN_OPT_LOG.md  AUTORESEARCH_30RUN_OPT_REPORT.md  AUTORESEARCH_LOG.md  AUTORESEARCH_OUTPUT_PACKING_LOG.md  AUTORESEARCH_OUTPUT_PACKING_REPORT.md  AUTORESEARCH_PREFIX_CACHE_LOG.md  AUTORESEARCH_PREFIX_CACHE_REPORT.md  AUTORESEARCH_PROMPT_PACKING_V2_LOG.md  AUTORESEARCH_PROMPT_PACKING_V2_REPORT.md  AUTORESEARCH_REPORT.md  AUTORESEARCH_REPORTING_LOG.md  AUTORESEARCH_REPORTING_REPORT.md  CLEANUP_REPORT.md  COMBINED_POSITIVES_REPORT.md  COMMIT_SUMMARY.md  PROMPT_PACKING_VALIDATION.md  README.md
MoME-MoCE-Exp/: .gitignore  HANDOFF_CONTEXT.md  README.md  alexandria-mcp.cmd  alexandria-simple.cmd  kittylitter.cmd  pyproject.toml
MoME-MoCE-Exp/alexandria_harness/: __init__.py  engine_client.py  scenario_runner.py  transform.py  validate.py
MoME-MoCE-Exp/alexandria_simple/: README.md  app.js  index.html  styles.css
MoME-MoCE-Exp/docs/: ACCA_BUILD_DEV_PROCESS_WRITEUP_2026-05-12.md  ACCA_ESCAPE_SUPERCHARGED_DESIGN.md  AGENT_MEMORY_ADAPTER_RUN.md  AGENT_MEMORY_ANSWER_AB.md  AGENT_MEMORY_BURN_IN.md  AGENT_MEMORY_LONG_SESSION_DRILL.md  ALEXANDRIA_HARNESS.md  ALEXANDRIA_MCP_APP_SETUP.md  AUDIT_REPORTS_2026-05-10.md  AUTORESEARCH_LOOP_SCOREBOARD.md  AUTORESEARCH_MINED_EVAL_CASES.json  AUTORESEARCH_MINED_FAILURES.md  AUTORESEARCH_MINED_POLICY_EVAL.md  AUTORESEARCH_REGRESSION_GATE.md  AUTORESEARCH_RERANKER_FEATURE_EVAL.md  AUTORESEARCH_TRACK_RECORD_2026-05-10.md  CODEX_OPENCODE_MEMORY_PLUGIN_BOOTSTRAP_2026-05-11.md  CP0_BASELINE_2026-05-10.md  (+73 more)
(+438 files in other folders)
